--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     compile name: "snakeyaml", group: "org.yaml", version: "1.16-SNAPSHOT"
     compile name: "updater", group: "net.gravitydevelopment.updater", version: "2.1"
     compile name: "metrics", group: "org.mcstats.bukkit", version: "R8-SNAPSHOT"
+	compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     //compile name: "ProtocolLib", group: "com.comphenix.protocol", version: "3.6.3-SNAPSHOT"
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
@@ -162,4 +163,3 @@ task javadocJar(type: Jar) {
 task sourcesJar(type: Jar) {
     classifier = 'sources'
     from sourceSets.main.allSource
-}
