--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Build Script For Simple Hub
+ * Build Script For Utils
  */
 
 plugins {
@@ -87,46 +87,6 @@ uploadArchives {
     flatDir {
            dirs 'repos'
        }
-    
-    mavenDeployer {
-      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-        authentication(userName: "", password: "")
-      }
-
-      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-        authentication(userName: "", password: "")
-      }
-
-      pom.project {
-        name 'Utils'
-        packaging 'jar'
-        description 'Codekrafter\'s Spigot/Bukkit Utils'
-        url 'codekrafter.net'
-
-        scm {
-          connection 'https://github.com/codekrafter/Utils.git'
-          developerConnection 'https://github.com/codekrafter/Utils.git'
-          url 'https://github.com/codekrafter/Utils'
-        }
-
-        licenses {
-          license {
-            name 'The Apache License, Version 2.0'
-            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-          }
-        }
-
-        developers {
-          developer {
-            id 'codekrafter'
-            name 'Eli (codekrafter)'
-            email 'codekrafter@gmail.com'
-          }
-        }
-      }
-    }
   }
 }
 
@@ -138,10 +98,6 @@ shadowJar {
     exclude 'META-INF/*.DSA'
     exclude 'META-INF/*.RSA'
     exclude 'license/*'
-}
-
-signing {
-    sign configurations.archives
 }
 
 task push(type: Copy, dependsOn: 'build') {
@@ -163,3 +119,4 @@ task javadocJar(type: Jar) {
 task sourcesJar(type: Jar) {
     classifier = 'sources'
     from sourceSets.main.allSource
+}
